# wolbox

./: .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  run.sh  setup.cfg
wolbox/: __init__.py  config.py  wolbox.py
wolbox/static/: style.css
wolbox/templates/: base.html
wolbox/templates/wolbox/: index.html
