[metadata]
name = wolbox
version = 1.0.0
url = https://ildefons.de/
license = BSD-3-Clause
maintainer = Moritz Röhrich
maintainer_email = moritz@ildefons.de
description = Small Webtool for sending WOL packets
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    waitress
    wakeonlan
    python3-nmap

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    wolbox
